# ss2025_harm_osc

./: .gitignore  README.md  customNewton.py  harm_osc_system_jax.py  harm_osc_system_sympy.py  harmonic_oscillator.py  integrator.py  main.py  parallel_example.py  pyproject.toml  test_harm_osc.py
